pom.xml 정리
현재 프로젝트에서 불필요한 속성을 제거하고,

분리되었던 내용을 하나의 pom.xml으로 합쳤다.