@@ -3,25 +3,50 @@
   xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
   xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 https://maven.apache.org/maven-v4_0_0.xsd">
   <modelVersion>4.0.0</modelVersion>
-
-  <parent>
-    <groupId>org.fp024</groupId>
-    <artifactId>study-dependencies-parent-with-ee11-jetty</artifactId>
-    <version>1.0.0-BUILD-SNAPSHOT</version>
-    <relativePath>./base-pom/ee11-jetty.xml</relativePath>
-  </parent>
-
+  <groupId>org.fp024</groupId>
   <artifactId>my-board</artifactId>
+  <version>1.0.0-SNAPSHOT</version>
   <name>${project.artifactId}</name>
   <packaging>war</packaging>
-  
-  <!-- Spring 7 + MyBatis Dynamic SQL 기반 버전 프로퍼티는 하위 프로젝트에서 직접 관리 -->
-  <properties>
-    <!-- Java 버전을 21 이상으로 사용하고 싶을 때, 바꿔보자! -->
-    <!-- Java 21: 경고 발생: 꺼도 문제 없는 경고로 보이는 것들은 껏음 -->
-    <!-- Java 25: 오류 발생: Maven 4 + maven-compiler-plugin 4.0.0 부터 지원 할 것 같다 -->
-    <java.version>21</java.version>
 
+  <properties>
+    <java.version>21</java.version>
+    <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
+
+    <maven.compiler.source>${java.version}</maven.compiler.source>
+    <maven.compiler.target>${java.version}</maven.compiler.target>
+
+    <org.aspectj-version>1.9.25.1</org.aspectj-version>
+
+    <quartz.version>2.5.2</quartz.version>
+    <gson.version>2.14.0</gson.version>
+
+    <log4j2.version>2.26.0</log4j2.version>
+
+    <lombok.version>1.18.46</lombok.version>
+
+    <mybatis.version>3.5.19</mybatis.version>
+    <mybatis.dynamic.sql.version>2.0.0</mybatis.dynamic.sql.version>
+
+    <hikaricp.version>7.0.2</hikaricp.version>
+
+    <ojdbc17.version>23.26.1.0.0</ojdbc17.version>
+
+    <hsqldb.version>2.7.4</hsqldb.version>
+
+    <thumbnailator.version>0.4.21</thumbnailator.version>
+
+    <junit.version>6.1.0</junit.version>
+
+    <json-path.version>3.0.0</json-path.version>
+
+    <mockito.version>5.23.0</mockito.version>
+
+    <hamcrest.version>3.0</hamcrest.version>
+
+    <assertj.version>3.27.7</assertj.version>
+
+    <commons-fileupload.version>1.6.0</commons-fileupload.version>
 
     <jakarta.servlet-api.version>6.1.0</jakarta.servlet-api.version>
     <jakarta.servlet.jsp.jstl-api.version>3.0.2</jakarta.servlet.jsp.jstl-api.version>
@@ -34,13 +59,58 @@
 
     <mybatis.spring.version>4.0.0</mybatis.spring.version>
 
-    <junit.version>${junit-v6.version}</junit.version>
-    <java-time-jsptags.version>${java-time-jsptags-jakarta.version}</java-time-jsptags.version>
+    <java-time-jsptags.version>2.0.2</java-time-jsptags.version>
+
+    <!-- Jetty Maven 플러그인 설정 -->
+    <jetty.version>12.1.10</jetty.version>
+    <!-- Jetty Http 포트 기본값 -->
+    <jetty.port>8080</jetty.port>
+    <!-- Jetty Context Path 설정 기본값 -->
+    <jetty-context-path>/</jetty-context-path>
+    <!-- XML 컨텍스트 설정일 때는 잘 되는데, Spring Java Config 설정일 때는 예외가 난다. 일단 자동 재배포 재시작의 기본 값은 비활성화 상태로 두자 -->
+    <jetty-auto-deploy-seconds>-1</jetty-auto-deploy-seconds>
+
 
     <!-- Tomcat 11.0.x는 Servlet 6.1을 정식 지원함. -->
+    <cargo.version>1.10.27</cargo.version>
     <cargo-tomcat.containerId>tomcat11x</cargo-tomcat.containerId>
-    <cargo-tomcat.version>11.0.21</cargo-tomcat.version>
+    <cargo-tomcat.version>11.0.22</cargo-tomcat.version>
+    <cargo-context-path>${jetty-context-path}</cargo-context-path>
+    <cargo-server-port>${jetty.port}</cargo-server-port>
+
+
+    <!-- Maven 플러그인 버전 관리 -->
+    <mybatis-generator-maven-plugin.version>2.0.0</mybatis-generator-maven-plugin.version>
+    <maven-war-plugin.version>3.5.1</maven-war-plugin.version>
+    <maven-resources-plugin.version>3.5.0</maven-resources-plugin.version>
+    <maven-surefire-plugin.version>3.5.5</maven-surefire-plugin.version>
+    <maven-compiler-plugin.version>3.15.0</maven-compiler-plugin.version>
+    <maven-toolchains-plugin.version>3.2.0</maven-toolchains-plugin.version>
+    <maven-clean-plugin.version>3.5.0</maven-clean-plugin.version>
+
+    <!-- WAS에 따라서 JSTL이 포함되어있는 경우가 있음 (예: Jetty), 기본은 포함되지 않은 것으로 설정 -->
+    <jstl-scope.type>compile</jstl-scope.type>
   </properties>
+
+  <dependencyManagement>
+    <dependencies>
+      <dependency>
+        <groupId>org.apache.logging.log4j</groupId>
+        <artifactId>log4j-bom</artifactId>
+        <version>${log4j2.version}</version>
+        <scope>import</scope>
+        <type>pom</type>
+      </dependency>
+      <dependency>
+        <groupId>org.junit</groupId>
+        <artifactId>junit-bom</artifactId>
+        <version>${junit.version}</version>
+        <type>pom</type>
+        <scope>import</scope>
+      </dependency>
+    </dependencies>
+  </dependencyManagement>
+
 
   <!-- web.xml에서 경로 변화를 주기위해, profile을 윈도우와 리눅스 환경으로 나눠보았다. -->
   <profiles>
@@ -84,6 +154,140 @@
             </excludes>
           </resource>
         </resources>
+      </build>
+    </profile>
+
+    <!-- Tomcat 기본 웹 애플리케이션 실행 프로파일 -->
+    <profile>
+      <id>tomcat-run</id>
+      <properties>
+        <jstl-scope.type>compile</jstl-scope.type>
+      </properties>
+      <build>
+        <plugins>
+          <!-- 실제 Tomcat 배포 실행 테스트 -->
+          <!-- mvn clean package -Ptomcat-run -DskipTests cargo:run -->
+          <plugin>
+            <groupId>org.codehaus.cargo</groupId>
+            <artifactId>cargo-maven3-plugin</artifactId>
+            <version>${cargo.version}</version>
+            <configuration>
+              <container>
+                <containerId>${cargo-tomcat.containerId}</containerId>
+                <systemProperties>
+                  <file.encoding>UTF-8</file.encoding>
+                </systemProperties>
+                <zipUrlInstaller>
+                  <url>
+                    https://repo.maven.apache.org/maven2/org/apache/tomcat/tomcat/${cargo-tomcat.version}/tomcat-${cargo-tomcat.version}.zip
+                  </url>
+                  <downloadDir>${project.build.directory}/downloads</downloadDir>
+                  <extractDir>${project.build.directory}/extracts</extractDir>
+                </zipUrlInstaller>
+              </container>
+              <configuration>
+                <type>standalone</type>
+                <properties>
+                  <cargo.jvmargs><!-- 
+                  -->--add-opens=java.base/java.io=ALL-UNNAMED <!--
+                  -->
+                    --add-opens=java.base/java.lang=ALL-UNNAMED <!--
+                  -->
+                    --add-opens=java.rmi/sun.rmi.transport=ALL-UNNAMED <!--
+                  --></cargo.jvmargs>
+                  <cargo.servlet.port>${cargo-server-port}</cargo.servlet.port>
+                  <!-- Ctrl + C로 외부 Cargo 프로세스가 대기하지 않고 백그라운드 실행이 되야할 것 같은데,  원하는대로 안된다. ㅠㅠ -->
+                  <!-- https://codehaus-cargo.github.io/cargo/Container+Start.html -->
+                  <!-- <cargo.process.spawn>true</cargo.process.spawn> -->
+                </properties>
+              </configuration>
+              <deployables>
+                <deployable>
+                  <groupId>${project.groupId}</groupId>
+                  <artifactId>${project.artifactId}</artifactId>
+                  <type>war</type>
+                  <properties>
+                    <context>${cargo-context-path}</context>
+                  </properties>
+                </deployable>
+              </deployables>
+            </configuration>
+          </plugin>
+        </plugins>
+      </build>
+    </profile>
+
+    <!-- Jetty 기본 웹 애플리케이션 실행  -->
+    <profile>
+      <id>jetty-run</id>
+      <!-- 
+        여기서 activeByDefault를 true 지정해버리면 이 프로필에 속한 properties가 무조건 우선 된다. 
+        상위의 tomcat-run 프로필을 설정해서 실행하더라도 jstl-scope.type 속성 값이 provided로 덮어씌어 져버림.
+        혼란 방지를 위해 설정 제거해놔야겠다.
+        
+        그래도 불편한 점이 생기긴함.. jetty 실행시 프로필을 꼭 지정해야함.
+      -->
+      <!--
+      <activation>
+        <activeByDefault>true</activeByDefault>
+      </activation>
+      -->
+      <properties>
+        <jstl-scope.type>provided</jstl-scope.type>
+      </properties>
+      <build>
+        <plugins>
+          <!-- Jetty 서버 구동 -->
+          <!-- 도움말 자세히보기: mvnw jetty:help -Ddetail=true -Dgoal=run -->
+          <plugin>
+            <!--
+            https://eclipse.dev/jetty/documentation/jetty-12/programming-guide/index.html#jetty-maven-plugin -->
+            <!-- 문서에는 언급이 따로 없음. -->
+            <!--
+            https://eclipse.dev/jetty/documentation/jetty-12/programming-guide/index.html#pg-migration-11-to-12 -->
+            <!-- 여기서는 가이드가 있긴한데.. 여전히 groupId가 잘못된 것 같은데...😅 
+                org.eclipse.jetty.ee{8,9,10}:jetty-ee{8,9,10}-jetty-maven-plugin 가 아니고,
+                org.eclipse.jetty.ee{8,9,10}:jetty-ee{8,9,10}-maven-plugin 가 되야하는 것이 아닌지?
+            -->
+            <groupId>org.eclipse.jetty.ee11</groupId>
+            <artifactId>jetty-ee11-maven-plugin</artifactId>
+            <version>${jetty.version}</version>
+            <configuration>
+              <httpConnector>
+                <!--host>localhost</host-->
+                <port>${jetty.port}</port>
+              </httpConnector>
+              <webApp>
+                <contextPath>${jetty-context-path}</contextPath>
+                <descriptor>${web-xml-location}</descriptor>
+                <sessionHandler>
+                  <sessionIdPathParameterName>none</sessionIdPathParameterName>
+                </sessionHandler>
+              </webApp>
+              <deployMode>EMBED</deployMode>
+              <stopKey>CTRL+C</stopKey>
+              <stopPort>8999</stopPort>
+              <!-- 9.x 설정: <scanIntervalSeconds> 대신 <scan> 사용 -->
+              <!-- 
+                변경 감지 자동 재시작시 ContextLoaderListener가 제대로 실행되지 않는 오류가 발생한다.
+                설정을 -1로하여 자동 재시작이 일어나지 않도록 한다.
+               -->
+              <scan>${jetty-auto-deploy-seconds}</scan>
+              <scanTargetPatterns>
+                <scanTargetPattern>
+                  <directory>src/main/webapp/WEB-INF</directory>
+                  <includes>
+                    <include>**/*.properties</include>
+                    <include>**/*.xml</include>
+                  </includes>
+                  <excludes>
+                    <exclude>**/*.jsp</exclude>
+                  </excludes>
+                </scanTargetPattern>
+              </scanTargetPatterns>
+            </configuration>
+          </plugin>
+        </plugins>
       </build>
     </profile>
   </profiles>
@@ -180,7 +384,7 @@
     </dependency>
 
     <!-- Database -->
-    <!-- https://mvnrepository.com/artifact/com.oracle.database.jdbc/ojdbc11/ -->
+    <!-- https://mvnrepository.com/artifact/com.oracle.database.jdbc/ojdbc17/ -->
     <dependency>
       <groupId>com.oracle.database.jdbc</groupId>
       <artifactId>ojdbc17</artifactId>
@@ -190,6 +394,7 @@
     <dependency>
       <groupId>com.zaxxer</groupId>
       <artifactId>HikariCP</artifactId>
+      <version>${hikaricp.version}</version>
     </dependency>
 
     <dependency>
@@ -301,6 +506,30 @@
 
   </dependencies>
   <build>
+    <pluginManagement>
+      <plugins>
+        <plugin>
+          <artifactId>maven-clean-plugin</artifactId>
+          <version>${maven-clean-plugin.version}</version>
+        </plugin>
+        <plugin>
+          <artifactId>maven-compiler-plugin</artifactId>
+          <version>${maven-compiler-plugin.version}</version>
+        </plugin>
+        <plugin>
+          <artifactId>maven-resources-plugin</artifactId>
+          <version>${maven-resources-plugin.version}</version>
+        </plugin>
+        <plugin>
+          <artifactId>maven-surefire-plugin</artifactId>
+          <version>${maven-surefire-plugin.version}</version>
+        </plugin>
+        <plugin>
+          <artifactId>maven-war-plugin</artifactId>
+          <version>${maven-war-plugin.version}</version>
+        </plugin>
+      </plugins>
+    </pluginManagement>
     <plugins>
       <plugin>
         <artifactId>maven-compiler-plugin</artifactId>
@@ -309,12 +538,12 @@
           <target>${java.version}</target>
           <compilerArgs>
             <arg>-Xlint:all</arg>
-            <!-- <arg>-Xlint:-options</arg> annotation processing 경고 무시 (Java 21에서는 아직 INFO 레벨여서, 정보를 노출한다.) -->
-            <arg>-Xlint:-processing</arg> <!-- No processor claimed any of these annotations 경고는 노출되지않게 설정 -->
+            <arg>-Xlint:-processing</arg>
+            <arg>-proc:full</arg>
             <arg>-Xlint:-path</arg> <!-- bad path element 경고 무시 -->
             <arg>-Xlint:-classfile</arg> <!-- 참조하는 클래스 파일 없음 경고 무시 -->
-            <arg>-parameters</arg>
           </compilerArgs>
+          <parameters>true</parameters>
           <showWarnings>true</showWarnings>
           <showDeprecation>true</showDeprecation>
         </configuration>
@@ -404,7 +633,8 @@
         <configuration>
           <!-- https://mybatis.org/generator/running/runningWithMaven.html -->
           <!-- Maven Goal 실행: mvn mybatis-generator:generate -->
-          <!-- <configurationFile>${project.basedir}/src/test/resources/generatorConfig.xml</configurationFile> -->
+          <!--
+          <configurationFile>${project.basedir}/src/test/resources/generatorConfig.xml</configurationFile> -->
           <configurationFile>${project.basedir}/generatorConfig.xml</configurationFile>
           <detail>true</detail>
           <verbose>true</verbose>
@@ -413,8 +643,8 @@
         <dependencies>
           <dependency>
             <groupId>com.oracle.database.jdbc</groupId>
-            <artifactId>ojdbc11</artifactId>
-            <version>${ojdbc11.version}</version>
+            <artifactId>ojdbc17</artifactId>
+            <version>${ojdbc17.version}</version>
           </dependency>
         </dependencies>
       </plugin>
